[package]
name = "ws2812-test"
version = "0.1.0"
authors = ["Stefan Riesenberger <stefan.riesenberger@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ws2812-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
embedded-hal = {version = "1.0.0"}
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = {version = "0.44"}
esp-idf-sys = {version = "0.35"}

smart-leds = "*"
smart-leds-trait = { version = "0.3", optional = true }
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
anyhow = "*"

num-derive = "*"
num-traits = "*"

[dev-dependencies]
anyhow = "1"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

[build-dependencies]
embuild = "0.32.0"
anyhow = "1"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released